--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,5 +1,5 @@
 body	{
-	background: url("C:/Users/dbov9/Desktop/Aviakubo.github.io/unit_3/images/hero_image.jpg");
+	background: url("http://i.imgur.com/hTuL8mv.jpg");
 	background-size: cover;
 	color: white;
 	text-align: center;
