--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,9 +1,9 @@
 body	{
-	background: url("http://i.imgur.com/hTuL8mv.jpg");
+	background: url("C:/Users/dbov9/Desktop/Aviakubo.github.io/unit_3/images/hero_image.jpg");
 	color: white;
 	text-align: center;
 	font-family: sans-serif;
-	font-size: 20px;
+	font-size: 10px;
 	font-weight: bold;
 	background-size: cover;
 }
@@ -12,34 +12,34 @@ p	{
 	color: white;
 	text-align: center;
 	font-family: sans-serif;
-	font-size: 20px;
+	font-size: 10px;
 }
 #slogan	{
-	font-size: 40px;
+	font-size: 20px;
 	font-style: italic;
 }
 h1	{
 	font-weight: bolder;
-	font-size:90px;
+	font-size:45px;
 }
 #list	{
-	font-size: 30px;
-	padding-top: 150px;
+	font-size: 15px;
+	padding-top: 75px;
 	text-align: inline;
 }
 ul	{
-	font-size: 30px;
+	font-size: 15px;
 	display: inline;
 }
 #desc	{
-	padding-left: 400px;
-	padding-right: 400px;
+	padding-left: 200px;
+	padding-right: 200px;
 }
 hr{
-	width: 1250px;
+	width: 625px;
 }
 footer	{
-	padding-top: 350px;
-	font-size: 15px;
+	padding-top: 175px;
+	font-size: 7.5px;
 	font-style: italic;
 }
