--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url(https://fonts.googleapis.com/css?family=PT+Serif);
 body	{
 	background: url("http://i.imgur.com/hTuL8mv.jpg");
 	color: white;
@@ -11,35 +13,42 @@ body	{
 p	{
 	color: white;
 	text-align: center;
-	font-family: sans-serif;
-	font-size: 15px;
+	font-family: 'PT Serif', serif;
+	font-size: 18px;
+	line-height: 1.5em;
+	margin: 1.5em;
 }
 #slogan	{
+	font-family: 'Poiret One', cursive;
 	font-size: 20px;
 	font-style: italic;
 }
 h1	{
-	font-weight: bolder;
+	font-family: 'Poiret One', cursive;
+	font-weight: black;
 	font-size:45px;
 }
 #list	{
+	font-family: 'Poiret One', cursive;
 	font-size: 15px;
 	padding-top: 75px;
 	text-align: inline;
 }
 ul	{
+	font-family: 'Poiret One', cursive;
 	font-size: 15px;
 	display: inline;
 }
 #desc	{
-	padding-left: 200px;
-	padding-right: 200px;
+	margin-left: 30em;
+	margin-right: 30em;
 }
 hr{
 	width: 625px;
 }
 footer	{
-	padding-top: 175px;
-	font-size: 7.5px;
+	font-family: 'Poiret One', cursive;
+	margin-top: 20em;
+	font-size: 12px;
 	font-style: italic;
 }
