--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -18,11 +18,13 @@ p	{
 	line-height: 1.5em;
 	margin: 1.5em;
 }
+
 #slogan	{
 	font-family: 'Poiret One', cursive;
 	font-size: 20px;
 	font-style: italic;
 }
+
 h1	{
 	font-family: 'Poiret One', cursive;
 	font-weight: black;
@@ -39,16 +41,29 @@ ul	{
 	font-size: 15px;
 	display: inline;
 }
+
 #desc	{
 	margin-left: 20em;
 	margin-right: 20em;
 }
+
 hr{
 	width: 625px;
 }
+
 footer	{
 	font-family: 'Poiret One', cursive;
 	margin-top: 7.5em;
 	font-size: 12px;
 	font-style: italic;
+}
+
+
+#nav	{
+	display: inline-block;
+}
+
+nav	{
+	text-align: inline-block;
+	display: inline;
 }
